--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,6 +10,7 @@
      <div class="main-content">
 
     {{>header}}
+    <p>This site was created by Dimuthu.It uses data from mapbox.com and darksky.net</p>
     <img src="/img/women2.png" alt="" />
      </div>
     {{>footer}}
